2004-01-15  Paolo Maggi  <paolo.maggi@polito.it> 

	[ gedit 2.5.3 released ]

2004-01-13  Paolo Maggi  <paolo.maggi@polito.it> 

	* gedit-view.[ch] (gedit_view_set_editable): new function

	* gedit-menus.[ch] (gedit_menus_all_sensible_verbs)
	(gedit_menus_loading_sensible_verbs)
	(gedit_menus_printing_sensible_verbs): new sets of verbs

	* gedit-mdi.[ch] (state_changed): new signal
	(gedit_mdi_get_state)(gedit_mdi_set_state): new methods

	* gedit-mdi.c (update_ui_according_to_state): new function.
	(gedit_mdi_add_open_button): returns the button
	(gedit_mdi_remove_views_handler): doesn't remove view if state
	is different from GEDIT_STATE_NORMAL
	(gedit_mdi_set_active_window_verbs_sensitivity): take care of
	state

	* gedit-mdi-child.c (gedit_state_changed_handler): new function
	(menu_show): disable menu items if state is different from normal

	* gedit-file.c (grab_mouse)(ungrab_mouse): removed. 
	Use gedit_mdi_set_state to set the state while loading.

2004-01-12  Paolo Borelli  <pborelli@katamail.com>

	* gedit/bonobo-mdi.c: handle don't start drag&drop when
	double-clicking on a tab (fixes 129994).

	* gedit/gedit-file.c: fix a compilation warning.

2004-01-12  Paolo Maggi  <paolo.maggi@polito.it> 

	Implemented async loading of remote files.

	New Close All dialog (thanks to Paolo Borelli for his
	help)

	HIG-fication of the revert dialog (thanks to Paolo Borelli 
	for his	help)

	This is a very big patch and I'm too lazy to fill a more
	detaild ChangeLog entry.

	Modified files:
	
	* bonobo-mdi.c
	* bonobo-mdi.h
	* gedit-commands.c
	* gedit-document.c
	* gedit-document.h
	* gedit-file.c
	* gedit-file.h
	* gedit-marshal.list
	* gedit-mdi-child.c
	* gedit-mdi-child.h
	* gedit-mdi.c
	* gedit-mdi.h
	* gedit-session.c
	* gedit-ui.xml
	* gedit-utils.c
	* gedit-utils.h
	* gedit-view.c
	* gedit-window-server.c
	* gedit2.c
	* dialogs/Makefile.am
	
	New files:
	* dialogs/gedit-close-confirmation-dialog.c
	* dialogs/gedit-close-confirmation-dialog.h