@@ -1,3 +1,8 @@
+2004-02-09  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-file-selector-utils.c: handle response
+	GTK_RESPONSE_DELETE_EVENT like a cancel. (#133851)
+
 2004-01-15  Paolo Maggi  <paolo.maggi@polito.it> 
 
 	[ gedit 2.5.3 released ]
